Fix Profile view profile pic overlaps stats text

--- a/style/style.css
+++ b/style/style.css
@@ -389,7 +389,7 @@ img.fillheight {
 #rbprofile #links ul li { padding: 7px; border-bottom: 1px solid #ddd; }
 #rbprofile #links ul li a { text-decoration: none; font-size: 13px; }
 #rbprofile #profile-picture { background: #e9e9e9; padding: 7px; float: left; }
-#rbprofile #profile-picture img { max-width: 100%; float: left; }
+#rbprofile #profile-picture img { width: 100%; max-width: 100%; float: left; }
 .rbcolumn .addthis_toolbox { margin-bottom: 15px; padding: 7px; background: #ddd; }
 .rblayout .profile-photos { padding: 10px 0px 0px 10px; background: #e9e9e9; overflow: hidden; }
 .rblayout .profile-photos .photo { vertical-align: top; float: left; margin: 0px 10px 10px 0px; }
@@ -503,7 +503,7 @@ img.fillheight {
  
   body { -webkit-text-size-adjust: none; -ms-text-size-adjust: none; width: 100%; min-width: 0; margin-left: 0; margin-right: 0; padding-left: 0; padding-right: 0; }
   /* The Grid --- */
-  .rbcolumn { width: auto !important; float: none; margin-bottom: 30px; }
+  .rbcolumn { width: auto !important; float: none; margin-bottom: 30px; clear: both; }
   .rbcolumn:last-child { float: none; }
   [class*="rbcolumn"] + [class*="rbcolumn"]:last-child { float: none; }
   .rbcolumn:before, .rbcolumn:after { content: ""; display: table; }
